--- a/kubernetes-deployment.yaml
+++ b/kubernetes-deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: llmops-app
+  labels:
+    app: llmops-app
 spec:
   replicas: 1
   selector:
@@ -23,6 +25,13 @@ spec:
             secretKeyRef:
               name: llmops-secrets
               key: GROQ_API_KEY
+        resources:
+          requests:
+            cpu: "250m"
+            memory: "512Mi"
+          limits:
+            cpu: "500m"
+            memory: "1Gi"
 
 ---
 
