--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,29 +34,30 @@ jobs:
             docker build -t us-central1-docker.pkg.dev/$GOOGLE_PROJECT_ID/llmops-repo/llmops-app:latest .
             docker push us-central1-docker.pkg.dev/$GOOGLE_PROJECT_ID/llmops-repo/llmops-app:latest
 
-  deploy_to_gke:
-    executor: machine-executor
-    steps:
-      - checkout
-      - gcp-cli/install:
-          components: kubectl
-      - run:
-          name: Authenticate with Google Cloud
-          command: |
-            echo "$GCLOUD_SERVICE_KEY" | base64 --decode > gcp-key.json
-            gcloud auth activate-service-account --key-file=gcp-key.json
-            gcloud auth configure-docker us-central1-docker.pkg.dev || gcloud auth configure-docker
-
-      - run:
-          name: Configure GKE
-          command: |
-            gcloud container clusters get-credentials $GKE_CLUSTER --region $GOOGLE_COMPUTE_REGION --project $GOOGLE_PROJECT_ID
-
-      - run:
-          name: Deploy to GKE
-          command: |
-            kubectl apply -f kubernetes-deployment.yaml --validate=false
-            kubectl rollout restart deployment llmops-app
+deploy_to_gke:
+  executor: machine-executor
+  steps:
+    - checkout
+    - gcp-cli/install
+    - run:
+        name: Install kubectl
+        command: |
+          gcloud components install kubectl --quiet
+    - run:
+        name: Authenticate with Google Cloud
+        command: |
+          echo "$GCLOUD_SERVICE_KEY" | base64 --decode > gcp-key.json
+          gcloud auth activate-service-account --key-file=gcp-key.json
+          gcloud auth configure-docker us-central1-docker.pkg.dev || gcloud auth configure-docker
+    - run:
+        name: Configure GKE
+        command: |
+          gcloud container clusters get-credentials $GKE_CLUSTER --region $GOOGLE_COMPUTE_REGION --project $GOOGLE_PROJECT_ID
+    - run:
+        name: Deploy to GKE
+        command: |
+          kubectl apply -f kubernetes-deployment.yaml --validate=false
+          kubectl rollout restart deployment llmops-app
 
 workflows:
   version: 2
