--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
           name: Deploy to GKE
           command: |
             kubectl apply -f kubernetes-deployment.yaml --validate=false
-            kubectl rollout restart deployment llmops-app
+            kubectl rollout restart deployment/llmops-app
 
 workflows:
   version: 2
