--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,9 +39,10 @@ jobs:
       - checkout
       - gcp-cli/install
       - run:
-          name: Install kubectl
+          name: Install latest kubectl
           command: |
-            gcloud components install kubectl --quiet
+            curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+            install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
       - run:
           name: Authenticate with Google Cloud
           command: |
